--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
