--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "recharts": "^2.15.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.14",
