--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datastax/astra-db-ts": "github:datastax/astra-db-ts",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slider": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
@@ -43,6 +45,7 @@
     "postcss": "^8.5.3",
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.14",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
