--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.5.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
