--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@datastax/astra-db-ts": "github:datastax/astra-db-ts",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
