--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "tailwindcss": "^4.0.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
+    "lightningcss-linux-x64-gnu": "^1.29.1"
   }
 }
